K1J-1982: Apply Spotless code formatting